Design create landing Page

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+@import "./styles/fonts.css";
 @import "tailwindcss";
 @config "../tailwind.config.js";
 
+/* Your custom CSS below */
+body {
+  font-family: "Nunito";
+}
+
 @media screen and (min-width: 1601px) {
-.container {
-        min-width: 1600px;
-    }
+  .container {
+    min-width: 1600px;
+  }
 }
